@@ -119,6 +119,11 @@ def afterInstall(self,product,reinstall):
     if not pp_ucd_props.hasProperty('useSecondaryMarkFavicon'):
       addProperty(pp_ucd_props, 'useSecondaryMarkFavicon', '', 'boolean', out)
 
+    if not pp_ucd_props.hasProperty('hideDeptName'):
+      addProperty(pp_ucd_props, 'hideDeptName', '', 'hideDeptName', out)
+
+
+
     # navigation settings
     pp.portal_properties.navtree_properties.manage_changeProperties(includeTop=0)
     pp.portal_properties.navtree_properties.manage_changeProperties(topLevel=1)
