@@ -14,7 +14,7 @@ secondTabRow = context.REQUEST.get('secondTabRow', None)
 useSecondaryMarkFavicon = context.REQUEST.get('useSecondaryMarkFavicon', None)
 customFavicon = context.REQUEST.get('customFavicon', None)
 deleteCustomFavicon  = context.REQUEST.get('deleteCustomFavicon', None)
-
+hideDeptName  = context.REQUEST.get('hideDeptName', None)
 
 
 portal = context.portal_url.getPortalObject()
@@ -29,6 +29,7 @@ pp_ucd_props.manage_changeProperties(privacyStatement=privacyStatement)
 pp_ucd_props.manage_changeProperties(showPrivacyStatement=showPrivacyStatement)
 pp_ucd_props.manage_changeProperties(showAccessibility=showAccessibility)
 pp_ucd_props.manage_changeProperties(useSecondaryMarkFavicon=useSecondaryMarkFavicon)
+pp_ucd_props.manage_changeProperties(hideDeptName=hideDeptName)
 
 
 # break array out to csv
