@@ -3,32 +3,47 @@
 
 <body>
 
-<tal:comment replace="nothing">
-  Don't hyper link to the portal root if we are viewing the front-page
-</tal:comment>
+<div class="dept-name" metal:define-macro="dept_name">
 
-<p id="dept-name" metal:define-macro="dept_name">
+  <table border="0" cellspacing="0" cellpadding="0">
 
-  <img tal:attributes="src python:portal_url + '/portal_properties/ucdploneskin-logo'"
-       tal:condition="exists: here/portal_properties/ucdploneskin-logo">
+    <tr>
 
-  <span tal:condition="python:here.getSectionFromURL() == 'section-front-page'">
-    <tal:portaltitle replace="portal_title">
-      Inserts portal title
-     </tal:portaltitle>
-  </span>
+      <td>
 
-  <span tal:condition="python:here.getSectionFromURL() != 'section-front-page'">
-    <a i18n:translate="tabs_home" tal:attributes="href python:portal_url;
-                                                  title portal_title;
-						  accesskey string:1">  
-      <tal:portaltitle replace="portal_title" tal:omit-tag="">
-        Inserts portal title
-       </tal:portaltitle>
-    </a>
-  </span>
+        <span tal:condition="python:here.getSectionFromURL() != 'section-front-page'">
+          <a tal:attributes="href python:portal_url">
+            <img tal:attributes="src python:portal_url + '/portal_properties/ucdploneskin-logo'"
+               tal:condition="exists: here/portal_properties/ucdploneskin-logo">
+          </a>
+        </span>
 
-</p>
+        <span tal:condition="python:here.getSectionFromURL() == 'section-front-page'">
+          <img tal:attributes="src python:portal_url + '/portal_properties/ucdploneskin-logo'"
+               tal:condition="exists: here/portal_properties/ucdploneskin-logo">
+        </span>
+
+      </td>
+
+      <td>
+        <span tal:condition="python:here.getSectionFromURL() == 'section-front-page'" class="dept-name-text">
+          <tal:portaltitle replace="portal_title" />
+        </span>
+
+        <span tal:condition="python:here.getSectionFromURL() != 'section-front-page'" class="dept-name-text">
+          <a tal:attributes="href python:portal_url;
+                             title portal_title;
+                             accesskey string:1">  
+
+            <tal:portaltitle replace="portal_title" />
+          </a>
+        </span>
+      </td>
+
+    </tr>
+  </table>
+
+</div>
 
 </body>
 </html>
